# TrueNAS-SwissArmyKnife-Utils

./: README.md
Config-API-Backup/: run_backup.py  test_backup.py  test_client.py  test_config.py
Config-API-Backup/contrib/systemd/: truenas-backup.timer
Config-API-Backup/truenas_backup/: backup.py  cli.py  notifier.py
Config-Auto-Backup/: .env.example  .gitignore  Readme.md  pyproject.toml  test_notifier.py
Config-Auto-Backup/contrib/systemd/: truenas-backup.service
Config-Auto-Backup/truenas_backup/: client.py  config.py  utils.py
Config-Local-Backup/: README.md  truenas-config-backup.sh
TrueNas-Custom-App-Icon/: README.md  update-icons.sh
Truenas-Env-Sync/: README.md  truenas_env_sync.py
